--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,17 @@ members = ["crates/*"]
 
 [workspace.dependencies]
 clap = { version = "4.5.35", features = ["derive", "env"] }
-error-stack = "0.5.0"
 indexmap = { version = "2.8.0", features = ["serde"] }
-jsonschema = "0.29.1"
-lazy-regex = "3.4.1"
-regex = "1.11.1"
 safer_owning_ref = "0.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yml = "0.0.12"
+stepflow-execution = { path = "./crates/stepflow-execution" }
+stepflow-protocol = { path = "./crates/stepflow-protocol" }
+stepflow-steps = { path = "./crates/stepflow-execution-steps" }
+stepflow-steps-client = { path = "./crates/stepflow-steps-client" }
+stepflow-steps-mcp = { path = "./crates/stepflow-steps-mcp" }
+stepflow-workflow = { path = "./crates/stepflow-workflow" }
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"]}
 url = { version = "2.5.4", features = ["serde"]}
