--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,16 @@ members = ["crates/*"]
 
 [workspace.dependencies]
 clap = { version = "4.5.35", features = ["derive", "env"] }
+error-stack = { version = "0.5.0" }
 indexmap = { version = "2.8.0", features = ["serde"] }
 safer_owning_ref = "0.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yml = "0.0.12"
+stepflow-compiler = { path = "./crates/stepflow-compiler" }
 stepflow-execution = { path = "./crates/stepflow-execution" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
-stepflow-steps = { path = "./crates/stepflow-execution-steps" }
+stepflow-steps = { path = "./crates/stepflow-steps" }
 stepflow-steps-client = { path = "./crates/stepflow-steps-client" }
 stepflow-steps-mcp = { path = "./crates/stepflow-steps-mcp" }
 stepflow-workflow = { path = "./crates/stepflow-workflow" }
