--- a/crates/stepflow-compiler/Cargo.toml
+++ b/crates/stepflow-compiler/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
-name = "stepflow-steps"
+name = "stepflow-compile"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
 publish = false
-description = "Types and trait for the step execution plugins."
+description = "Library for compiling and validating flows."
 
 [dependencies]
 error-stack.workspace = true
 indexmap.workspace = true
+stepflow-steps.workspace = true
 stepflow-workflow.workspace = true
-serde_json.workspace = true
 thiserror.workspace = true
+
+[dev-dependencies]
+serde_yml.workspace = true
+url.workspace = true
