--- a/crates/stepflow-workflow/Cargo.toml
+++ b/crates/stepflow-workflow/Cargo.toml
@@ -12,4 +12,5 @@ indexmap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yml.workspace = true
+thiserror.workspace = true
 url.workspace = true
