working on state

--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -8,3 +8,9 @@ publish = false
 description = "Execution logic for workflows."
 
 [dependencies]
+error-stack.workspace = true
+indexmap.workspace = true
+stepflow-steps.workspace = true
+stepflow-workflow.workspace = true
+thiserror.workspace = true
+url.workspace = true
