--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = ["crates/*"]
 clap = { version = "4.5.35", features = ["derive", "env"] }
 error-stack = { version = "0.5.0" }
 indexmap = { version = "2.8.0", features = ["serde"] }
+insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 safer_owning_ref = "0.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
