--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = ["crates/*"]
 
 [workspace.dependencies]
 clap = { version = "4.5.35", features = ["derive", "env"] }
+dynosaur = "0.2.0"
 error-stack = { version = "0.5.0" }
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
@@ -27,6 +28,7 @@ stepflow-steps-mcp = { path = "./crates/stepflow-steps-mcp" }
 stepflow-workflow = { path = "./crates/stepflow-workflow" }
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"]}
+trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
 
 # Enable max optimizations for dependencies, but not for our code
