--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ stepflow-workflow = { path = "./crates/stepflow-workflow" }
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"]}
 trait-variant = "0.1.2"
+tracing = "0.1.41"
 url = { version = "2.5.4", features = ["serde"]}
 
 # Enable max optimizations for dependencies, but not for our code
