--- a/crates/stepflow-compiler/Cargo.toml
+++ b/crates/stepflow-compiler/Cargo.toml
@@ -13,6 +13,7 @@ indexmap.workspace = true
 stepflow-steps.workspace = true
 stepflow-workflow.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 insta.workspace = true
