--- a/crates/stepflow-workflow/Cargo.toml
+++ b/crates/stepflow-workflow/Cargo.toml
@@ -9,6 +9,7 @@ description = "Workflow representation, optimization and validation."
 
 [dependencies]
 indexmap.workspace = true
+schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yml.workspace = true
