--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ error-stack = { version = "0.5.0" }
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 safer_owning_ref = "0.5.0"
-schemars = "0.8.22"
+schemars = { version = "0.8.22", features = ["preserve_order", "indexmap2", "impl_json_schema", "url"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yml = "0.0.12"
