feat: initial protocol and python impl

--- a/crates/stepflow-plugin-testing/Cargo.toml
+++ b/crates/stepflow-plugin-testing/Cargo.toml
@@ -9,4 +9,6 @@ description = "Step execution plugin(s) used for tests."
 
 [dependencies]
 stepflow-plugin.workspace = true
+stepflow-protocol.workspace = true
+stepflow-schema.workspace = true
 stepflow-workflow.workspace = true
