--- a/crates/stepflow-plugin/Cargo.toml
+++ b/crates/stepflow-plugin/Cargo.toml
@@ -11,6 +11,8 @@ description = "Types and trait for the step execution plugins."
 dynosaur.workspace = true
 error-stack.workspace = true
 indexmap.workspace = true
+schemars.workspace = true
+stepflow-protocol.workspace = true
 stepflow-workflow.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
