ref: Use JSON value and JSON schema
This still has rough edges -- ideally, we wouldn't need to
copy the field names or the schema as often as we do. Once
things work, we should explore either storing everything in
an arena and referencing that, or passing around some other
form of light-weight reference.

--- a/crates/stepflow-plugin/Cargo.toml
+++ b/crates/stepflow-plugin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stepflow-components"
+name = "stepflow-plugin"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -17,4 +17,4 @@ thiserror.workspace = true
 trait-variant.workspace = true
 
 [dev-dependencies]
-stepflow-components-testing.workspace = true
+stepflow-plugin-testing.workspace = true
