--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,22 +15,23 @@ error-stack = { version = "0.5.0" }
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 safer_owning_ref = "0.5.0"
-schemars = { version = "0.8.22", features = ["preserve_order", "indexmap2", "impl_json_schema", "url"] }
-serde = { version = "1.0.219", features = ["derive"] }
+schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
+serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yml = "0.0.12"
 stepflow-compiler = { path = "./crates/stepflow-compiler" }
-stepflow-execution = { path = "./crates/stepflow-execution" }
-stepflow-protocol = { path = "./crates/stepflow-protocol" }
-stepflow-components = { path = "./crates/stepflow-components" }
 stepflow-components-client = { path = "./crates/stepflow-components-client" }
-stepflow-components-testing = { path = "./crates/stepflow-components-testing" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
+stepflow-execution = { path = "./crates/stepflow-execution" }
+stepflow-plugin = { path = "./crates/stepflow-plugin" }
+stepflow-plugin-testing = { path = "./crates/stepflow-plugin-testing" }
+stepflow-protocol = { path = "./crates/stepflow-protocol" }
+stepflow-schema = { path = "./crates/stepflow-schema" }
 stepflow-workflow = { path = "./crates/stepflow-workflow" }
 thiserror = "2.0.12"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"]}
-trait-variant = "0.1.2"
 tracing = "0.1.41"
+trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
 
 # Enable max optimizations for dependencies, but not for our code
