--- a/crates/stepflow-compiler/Cargo.toml
+++ b/crates/stepflow-compiler/Cargo.toml
@@ -10,7 +10,7 @@ description = "Library for compiling and validating flows."
 [dependencies]
 error-stack.workspace = true
 indexmap.workspace = true
-stepflow-components.workspace = true
+stepflow-plugin.workspace = true
 stepflow-workflow.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
@@ -18,6 +18,6 @@ tracing.workspace = true
 [dev-dependencies]
 insta.workspace = true
 serde_yml.workspace = true
-stepflow-components-testing.workspace = true
+stepflow-plugin-testing.workspace = true
 tokio.workspace = true
 url.workspace = true
