--- a/crates/stepflow-compiler/tests/valid/basic.yaml
+++ b/crates/stepflow-compiler/tests/valid/basic.yaml
@@ -1,10 +1,10 @@
-inputs:
-  in1:
-    schema:
-      type: number
-  in2:
-    schema:
-      type: string
+input_schema:
+  object:
+    properties:
+      in1:
+        type: number
+      in2:
+        type: string
 steps:
   # 
   - component: mock://two_outputs
@@ -19,9 +19,6 @@ steps:
       b: { step: s1, output: b }
       c: { literal: 5 }
 outputs:
-  - name: out1
-    value: { step: s1, output: a }
-  - name: out2
-    value: { step: s2, output: output }
-  - name: outLiteral
-    value: { literal: 5 }
+  out1: { step: s1, output: a }
+  out2: { step: s1, output: b }
+  outLiteral: { literal: 5 }
