--- a/crates/stepflow-workflow/Cargo.toml
+++ b/crates/stepflow-workflow/Cargo.toml
@@ -13,5 +13,6 @@ schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yml.workspace = true
+stepflow-schema.workspace = true
 thiserror.workspace = true
 url.workspace = true
