Fix typo with stepflow-compile(r) reference in deps

--- a/crates/stepflow-compiler/Cargo.toml
+++ b/crates/stepflow-compiler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stepflow-compile"
+name = "stepflow-compiler"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
