--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = ["crates/*"]
 clap = { version = "4.5.35", features = ["derive", "env"] }
 dynosaur = "0.2.0"
 erased-serde = "0.4.6"
-error-stack = { version = "0.5.0" }
+error-stack = { version = "0.5.0", features = ["serde"] }
+futures = "0.3.31"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 safer_owning_ref = "0.5.0"
@@ -22,6 +23,7 @@ serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
 serde_yml = "0.0.12"
 similar = "2.7.0"
 similar-asserts = { version = "1.7.0", features = ["serde" ] }
+static_assertions = "1.1.0"
 stepflow-compiler = { path = "./crates/stepflow-compiler" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
 stepflow-components-stdio = { path = "./crates/stepflow-components-client" }
