ci: Add basic CI setup for multiple platforms

--- a/crates/stepflow-plugin-testing/Cargo.toml
+++ b/crates/stepflow-plugin-testing/Cargo.toml
@@ -13,6 +13,7 @@ stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
 stepflow-schema.workspace = true
 stepflow-workflow.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 static_assertions.workspace = true
