--- a/docs/package.json
+++ b/docs/package.json
@@ -20,7 +20,9 @@
     "@docusaurus/theme-mermaid": "^3.7.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-json-schema-plugin": "^1.14.0",
     "prism-react-renderer": "^2.3.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
