--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       matrix:
         include:
           - { os: ubuntu-latest }
-          - { os: macos-latest }
+          # - { os: macos-latest }
           # - { os: macos-13 }
-          - { os: windows-latest }
+          # - { os: windows-latest }
 
     name: Test ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
