--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
 stepflow-components-stdio = { path = "./crates/stepflow-components-client" }
 stepflow-execution = { path = "./crates/stepflow-execution" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
+stepflow-plugin-protocol = { path = "./crates/stepflow-plugin-protocol" }
 stepflow-plugin-testing = { path = "./crates/stepflow-plugin-testing" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
 stepflow-schema = { path = "./crates/stepflow-schema" }
