--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -23,7 +23,9 @@ url.workspace = true
 [dev-dependencies]
 serde.workspace = true
 serde_yml.workspace = true
+stepflow-plugin-protocol.workspace = true
 stepflow-plugin-testing.workspace = true
 insta.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
+which.workspace = true
