Initial commit of claude port output with some minor tweaks for testing. Updated gitignore with common TS stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@ target
 .vscode
 .idea
 .DS_Store
+
+# TypeScript specific
+node_modules
+dist
+coverage
+.nyc_output
+*.log
+*.tsbuildinfo
+.npm
+.eslintcache
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
