feat: stub out the command line interface
This creates the commands for `run`, `serve` and `submit` but only implements `run`.

This introduces a `stepflow-config.yml` that can be used to configure the available plugins.
See `examples/python` for how to set it up.

If there is a config, it is used as the working directory for the subprocesses.

If there is a flow, it is used as the search directory to locate the config.

JSON and YAML files are supported for most things (not the `stepflow-config.yml`
since I haven't yet implemented a richer search). Ideally, that would consider
`stepflow[-_]config.{yaml,yml,json}`. Likely a glob library I could use for that.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process"
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tracing = "0.1.41"
 tracing-error = "0.2.1"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json" ] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
 trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
 uuid = { version = "1.16.0", features = ["v4", "serde"]}
