--- a/crates/stepflow-plugin/Cargo.toml
+++ b/crates/stepflow-plugin/Cargo.toml
@@ -10,6 +10,7 @@ description = "Types and trait for the step execution plugins."
 [dependencies]
 dynosaur.workspace = true
 error-stack.workspace = true
+futures.workspace = true
 indexmap.workspace = true
 schemars.workspace = true
 stepflow-protocol.workspace = true
