--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,49 @@
-target
-.vscode
-.idea
-.DS_Store
-
-# TypeScript specific
-node_modules
-dist
-coverage
-.nyc_output
-*.log
-*.tsbuildinfo
-.npm
-.eslintcache
+# Dependencies
+node_modules/
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+# Build output
+dist/
+
+# Coverage directory used by tools like istanbul
+coverage/
+.nyc_output
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# TypeScript specific
+*.tsbuildinfo
+.npm
+.eslintcache
+
+# Project specific
+target
