ref: Combine crates in preparation for changes
This mainly combines things into a `stepflow-core` crate providing the core
workflow definitions, schema manipulation, and other information.

This is in preparation for some code changes:

1. Changing from the `ObjectSchema` wrapper to a standard JSON schema.
   This will allow things to pass around primitive values, etc.
2. Changing from passing `serde_json::Value` (in our wrapper) to a more
   friendly `Arc` wrapper, as well as adding the case for errors.

This also removes unused dependencies (and sets up machete in CI to automate that).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,3 +74,11 @@ jobs:
         components: 'rustfmt'
     - name: Format
       run: cargo fmt --check
+
+  detect-unused-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Machete
+        uses: bnjbvr/cargo-machete@main
