--- a/crates/stepflow-builtins/Cargo.toml
+++ b/crates/stepflow-builtins/Cargo.toml
@@ -15,9 +15,7 @@ schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 stepflow-plugin.workspace = true
-stepflow-protocol.workspace = true
-stepflow-schema.workspace = true
-stepflow-workflow.workspace = true
+stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
@@ -25,3 +23,6 @@ trait-variant.workspace = true
 
 [dev-dependencies]
 test-with.workspace = true
+
+[lints]
+workspace = true
