--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -13,12 +13,10 @@ futures.workspace = true
 indexmap.workspace = true
 serde_json.workspace = true
 stepflow-plugin.workspace = true
-stepflow-schema.workspace = true
-stepflow-workflow.workspace = true
+stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
-url.workspace = true
 
 [dev-dependencies]
 serde.workspace = true
@@ -29,3 +27,6 @@ insta.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
 which.workspace = true
+
+[lints]
+workspace = true
