--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -17,10 +17,13 @@ stepflow-builtins.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
 stepflow-plugin-protocol.workspace = true
-stepflow-workflow.workspace = true
+stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 url.workspace = true
 which.workspace = true
+
+[lints]
+workspace = true
