--- a/crates/stepflow-plugin-protocol/Cargo.toml
+++ b/crates/stepflow-plugin-protocol/Cargo.toml
@@ -10,20 +10,15 @@ description = "Stepflow components plugin using the Stepflow protocol."
 [dependencies]
 erased-serde.workspace = true
 error-stack.workspace = true
-indexmap.workspace = true
-safer_owning_ref.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yml.workspace = true
 stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
-stepflow-schema.workspace = true
-stepflow-workflow.workspace = true
+stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 tracing.workspace = true
-url.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
@@ -31,3 +26,6 @@ similar-asserts.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
 which.workspace = true
+
+[lints]
+workspace = true
