--- a/crates/stepflow-plugin-testing/Cargo.toml
+++ b/crates/stepflow-plugin-testing/Cargo.toml
@@ -10,10 +10,11 @@ description = "Step execution plugin(s) used for tests."
 [dependencies]
 error-stack.workspace = true
 stepflow-plugin.workspace = true
-stepflow-protocol.workspace = true
-stepflow-schema.workspace = true
-stepflow-workflow.workspace = true
+stepflow-core.workspace = true
 tracing.workspace = true
 
 [dev-dependencies]
 static_assertions.workspace = true
+
+[lints]
+workspace = true
