--- a/crates/stepflow-plugin/Cargo.toml
+++ b/crates/stepflow-plugin/Cargo.toml
@@ -11,13 +11,12 @@ description = "Types and trait for the step execution plugins."
 dynosaur.workspace = true
 error-stack.workspace = true
 futures.workspace = true
-indexmap.workspace = true
-schemars.workspace = true
-stepflow-protocol.workspace = true
-stepflow-workflow.workspace = true
-serde_json.workspace = true
+stepflow-core.workspace = true
 thiserror.workspace = true
 trait-variant.workspace = true
 
 [dev-dependencies]
 stepflow-plugin-testing.workspace = true
+
+[lints]
+workspace = true
