--- a/crates/stepflow-protocol/Cargo.toml
+++ b/crates/stepflow-protocol/Cargo.toml
@@ -8,14 +8,10 @@ publish = false
 description = "Types defining the stepflow JSON-RPC protocol."
 
 [dependencies]
-error-stack.workspace = true
-indexmap.workspace = true
-thiserror.workspace = true
-schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yml.workspace = true
-stepflow-schema.workspace = true
-stepflow-workflow.workspace = true
-url.workspace = true
+stepflow-core.workspace = true
 uuid.workspace = true
+
+[lints]
+workspace = true
