feat: Allow more general schemas
Split expressions/references out of `value.rs`.

Allow references to use JSON pointer paths (in documentation).
Implementation pending.

Allow references to use the complete value without a path.

Allow literals to be used directly.

--- a/crates/stepflow-execution/tests/flows/basic.yaml
+++ b/crates/stepflow-execution/tests/flows/basic.yaml
@@ -16,15 +16,15 @@ steps:
   - id: step1
     component: mock://one_output
     args:
-      input: { input: name }
+      input: { $from: $input, path: name }
   - id: step2
     component: mock://two_outputs
     args:
-      input: { step: step1, field: output }
+      input: { $from: step1, path: output }
 outputs:
-    name: { step: step1, field: output }
-    x: { step: step2, field: x }
-    y: { step: step2, field: y }
+    name: { $from: step1, path: output }
+    x: { $from: step2, path: x }
+    y: { $from: step2, path: y }
 test_cases:
   - input:
       name: a
