--- a/examples/python/basic.yaml
+++ b/examples/python/basic.yaml
@@ -16,19 +16,19 @@ steps:
   - id: m_plus_n
     component: python://add
     args:
-      a: { input: m }
-      b: { input: n }
+      a: { $from: $input, path: m }
+      b: { $from: $input, path: n }
   - id: m_times_n
     component: python://multiply
     args:
-      a: { input: m }
-      b: { input: n }
+      a: { $from: $input, path: m }
+      b: { $from: $input, path: n }
   - id: m_plus_n_times_n
     component: python://multiply
     args:
-      a: { step: m_plus_n, field: result }
-      b: { input: n }
+      a: { $from: m_plus_n, path: result }
+      b: { $from: $input, path: n }
 outputs:
-  m_plus_n_times_n: { step: m_plus_n_times_n, field: result }
-  m_times_n: { step: m_times_n, field: result }
-  m_plus_n: { step: m_plus_n, field: result }
+  m_plus_n_times_n: { $from: m_plus_n_times_n, path: result }
+  m_times_n: { $from: m_times_n, path: result }
+  m_plus_n: { $from: m_plus_n, path: result }
