--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -21,8 +21,8 @@ tracing.workspace = true
 [dev-dependencies]
 serde.workspace = true
 serde_yml.workspace = true
-stepflow-plugin-protocol.workspace = true
 stepflow-plugin-testing.workspace = true
+stepflow-protocol.workspace = true
 insta.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
