--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -14,10 +14,10 @@ serde.workspace = true
 serde_json.workspace = true
 serde_yml.workspace = true
 stepflow-builtins.workspace = true
+stepflow-core.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
-stepflow-plugin-protocol.workspace = true
-stepflow-core.workspace = true
+stepflow-protocol.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
