--- a/crates/stepflow-protocol/Cargo.toml
+++ b/crates/stepflow-protocol/Cargo.toml
@@ -8,9 +8,16 @@ publish = false
 description = "Types defining the stepflow JSON-RPC protocol."
 
 [dependencies]
-serde.workspace = true
+erased-serde.workspace = true
+error-stack.workspace = true
 serde_json.workspace = true
+serde.workspace = true
 stepflow-core.workspace = true
+stepflow-plugin.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
+tokio-stream.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 [lints]
