ref: Rename Value to ValueRef
Also allows accessing parts of the value using the original Arc (without cloning any parts of the root value).

--- a/crates/stepflow-core/Cargo.toml
+++ b/crates/stepflow-core/Cargo.toml
@@ -9,6 +9,7 @@ description = "Core types and functionality for stepflow workflows, schemas, and
 
 [dependencies]
 indexmap.workspace = true
+safer_owning_ref.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
