--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -11,6 +11,7 @@ description = "Execution logic for workflows."
 error-stack.workspace = true
 futures.workspace = true
 indexmap.workspace = true
+safer_owning_ref.workspace = true
 serde_json.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
