test: Move tests to stepflow-main; cleanup
This improves the testing to allow for more locally contained mock behavior.
Specifically:

1. The tests move from stepflow-execution to stepflow-main to make use of other
   parts of the CLI (specifically, the configuration type).
2. The test now include a `config` block.
3. The configuration block can now register component behaviors more generally,
   including the use of the `stepflow-mock` component.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ stepflow-builtins = { path = "./crates/stepflow-builtins" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
 stepflow-core = { path = "./crates/stepflow-core" }
 stepflow-execution = { path = "./crates/stepflow-execution" }
+stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
-stepflow-plugin-testing = { path = "./crates/stepflow-plugin-testing" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
 test-with = { version = "0.14.10", features = ["runtime"] }
 thiserror = "2.0.12"
