--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -16,6 +16,7 @@ serde_yml.workspace = true
 stepflow-builtins.workspace = true
 stepflow-core.workspace = true
 stepflow-execution.workspace = true
+stepflow-mock.workspace = true
 stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
 thiserror.workspace = true
@@ -24,6 +25,14 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 url.workspace = true
 which.workspace = true
+
+[dev-dependencies]
+serde.workspace = true
+serde_yml.workspace = true
+stepflow-protocol.workspace = true
+insta.workspace = true
+tracing-error.workspace = true
+tracing-subscriber.workspace = true
 
 [lints]
 workspace = true
