--- a/crates/stepflow-mock/Cargo.toml
+++ b/crates/stepflow-mock/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
-name = "stepflow-plugin"
+name = "stepflow-mock"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
 publish = false
-description = "Types and trait for the step execution plugins."
+description = "Mock component plugin for testing purposes."
 
 [dependencies]
-dynosaur.workspace = true
 error-stack.workspace = true
-futures.workspace = true
 serde.workspace = true
+stepflow-plugin.workspace = true
 stepflow-core.workspace = true
-thiserror.workspace = true
-trait-variant.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
+static_assertions.workspace = true
 
 [lints]
 workspace = true
