feat: Introduce context and eval
This allows a workflow to submit a workflow for execution.
This can be used for sub-workflows, or to allow an LLM to generate a workflow.

--- a/crates/stepflow-builtins/Cargo.toml
+++ b/crates/stepflow-builtins/Cargo.toml
@@ -20,8 +20,10 @@ thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 trait-variant.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
+indexmap.workspace = true
 test-with.workspace = true
 
 [lints]
