--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -18,6 +18,7 @@ stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+uuid.workspace = true
 
 [lints]
 workspace = true
