--- a/examples/data-pipeline/stepflow-config.yml
+++ b/examples/data-pipeline/stepflow-config.yml
@@ -3,3 +3,5 @@ plugins:
     type: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
+  - name: builtins
+    type: builtin
