--- a/crates/stepflow-protocol/Cargo.toml
+++ b/crates/stepflow-protocol/Cargo.toml
@@ -10,6 +10,7 @@ description = "Types defining the stepflow JSON-RPC protocol."
 [dependencies]
 erased-serde.workspace = true
 error-stack.workspace = true
+indexmap.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
