--- a/crates/stepflow-builtins/Cargo.toml
+++ b/crates/stepflow-builtins/Cargo.toml
@@ -14,6 +14,7 @@ openai-api-rs.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_yml.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
