--- a/crates/stepflow-builtins/Cargo.toml
+++ b/crates/stepflow-builtins/Cargo.toml
@@ -26,6 +26,7 @@ uuid.workspace = true
 [dev-dependencies]
 indexmap.workspace = true
 test-with.workspace = true
+tempfile.workspace = true 
 
 [lints]
 workspace = true
