--- a/crates/stepflow-main/tests/flows/basic.yaml
+++ b/crates/stepflow-main/tests/flows/basic.yaml
@@ -59,15 +59,15 @@ steps:
   - id: step1
     component: mock://one_output
     args:
-      input: { $from: $input, path: name }
+      input: { $ref: { workflow: input }, path: name }
   - id: step2
     component: mock://two_outputs
     args:
-      input: { $from: step1, path: output }
+      input: { $ref: { step: step1 }, path: output }
 outputs:
-    name: { $from: step1, path: output }
-    x: { $from: step2, path: x }
-    y: { $from: step2, path: y }
+    name: { $ref: { step: step1 }, path: output }
+    x: { $ref: { step: step2 }, path: x }
+    y: { $ref: { step: step2 }, path: y }
 test_cases:
   - input:
       name: a
