--- a/examples/openai/openai_chat.yaml
+++ b/examples/openai/openai_chat.yaml
@@ -14,13 +14,13 @@ steps:
   - id: create_messages
     component: "builtins://create_messages"
     args:
-      system_instructions: { $from: $input, path: system_message }
-      user_prompt: { $from: $input, path: prompt }
+      system_instructions: { $ref: { workflow: input }, path: system_message }
+      user_prompt: { $ref: { workflow: input }, path: prompt }
 
   - id: send_message
     component: "builtins://openai"
     args:
-      messages: { $from: create_messages, path: messages }
+      messages: { $ref: { step: create_messages }, path: messages }
   
 outputs:
-  response: { step: send_message, field: response }
+  response: { $ref: { step: send_message }, path: response }
