--- a/examples/python/basic.yaml
+++ b/examples/python/basic.yaml
@@ -16,19 +16,19 @@ steps:
   - id: m_plus_n
     component: python://add
     args:
-      a: { $from: $input, path: m }
-      b: { $from: $input, path: n }
+      a: { $ref: { workflow: input }, path: m }
+      b: { $ref: { workflow: input }, path: n }
   - id: m_times_n
     component: python://multiply
     args:
-      a: { $from: $input, path: m }
-      b: { $from: $input, path: n }
+      a: { $ref: { workflow: input }, path: m }
+      b: { $ref: { workflow: input }, path: n }
   - id: m_plus_n_times_n
     component: python://multiply
     args:
-      a: { $from: m_plus_n, path: result }
-      b: { $from: $input, path: n }
+      a: { $ref: { step: m_plus_n }, path: result }
+      b: { $ref: { workflow: input }, path: n }
 outputs:
-  m_plus_n_times_n: { $from: m_plus_n_times_n, path: result }
-  m_times_n: { $from: m_times_n, path: result }
-  m_plus_n: { $from: m_plus_n, path: result }
+  m_plus_n_times_n: { $ref: { step: m_plus_n_times_n }, path: result }
+  m_times_n: { $ref: { step: m_times_n }, path: result }
+  m_plus_n: { $ref: { step: m_plus_n }, path: result }
