--- a/crates/stepflow-main/tests/flows/error_skip.yaml
+++ b/crates/stepflow-main/tests/flows/error_skip.yaml
@@ -35,9 +35,9 @@ steps:
     on_error:
       action: skip
     args:
-      mode: { $ref: { workflow: input }, path: mode }
+      mode: { $from: { workflow: input }, path: mode }
 outputs:
-  error_result: { $ref: { step: error }, path: output }
+  error_result: { $from: { step: error }, path: output }
 test_cases:
   - input: { mode: "error" }
   - input: { mode: "succeed" }
