--- a/crates/stepflow-main/tests/flows/error_fail.yaml
+++ b/crates/stepflow-main/tests/flows/error_fail.yaml
@@ -35,9 +35,9 @@ steps:
     on_error:
       action: fail
     args:
-      mode: { $ref: { workflow: input }, path: mode }
+      mode: { $from: { workflow: input }, path: mode }
 outputs:
-  error_result: { $ref: { step: error }, path: output }
+  error_result: { $from: { step: error }, path: output }
 test_cases:
   - input: { mode: "error" }
     expect_failure: true
