feat: Allow nested expressions
This recurses into the JSON used for input/output and replaces any
expressions using `$from`.

This also introduces `$literal` as a wrapper for literals to avoid
the recursion.

--- a/crates/stepflow-main/tests/flows/basic.yaml
+++ b/crates/stepflow-main/tests/flows/basic.yaml
@@ -58,13 +58,13 @@ output_schema:
 steps:
   - id: step1
     component: mock://one_output
-    args:
+    input:
       input: { $from: { workflow: input }, path: name }
   - id: step2
     component: mock://two_outputs
-    args:
+    input:
       input: { $from: { step: step1 }, path: output }
-outputs:
+output:
     name: { $from: { step: step1 }, path: output }
     x: { $from: { step: step2 }, path: x }
     y: { $from: { step: step2 }, path: y }
