--- a/crates/stepflow-main/tests/flows/conditional_skip_use_default.yaml
+++ b/crates/stepflow-main/tests/flows/conditional_skip_use_default.yaml
@@ -63,18 +63,18 @@ steps:
   - id: conditional_step
     component: mock://one_output
     skip_if: { $from: { workflow: input }, path: should_skip }
-    args:
+    input:
       input: { $from: { workflow: input }, path: value }
   - id: dependent_step
     component: mock://handle_skip
-    args:
+    input:
       input:
         $from: { step: conditional_step }
         path: output
         on_skip:
           action: use_default
           default_value: "it was skipped"
-outputs:
+output:
   dependent_result: { $from: { step: dependent_step }, path: output }
 test_cases:
   - input:
