--- a/crates/stepflow-main/tests/flows/error_use_default.yaml
+++ b/crates/stepflow-main/tests/flows/error_use_default.yaml
@@ -31,9 +31,9 @@ steps:
     component: mock://error
     on_error:
       action: use_default
-    args:
+    input:
       mode: { $from: { workflow: input }, path: mode }
-outputs:
+output:
   error_result: { $from: { step: error } }
 test_cases:
   - input: { mode: "error" }
