--- a/examples/data-pipeline/pipeline.yaml
+++ b/examples/data-pipeline/pipeline.yaml
@@ -15,32 +15,32 @@ steps:
   # Parallel data processing steps
   - id: calculate_total_revenue
     component: python://sum_field
-    args:
+    input:
       data: { $from: { workflow: input }, path: "sales_data" }
       field: "revenue"
 
   - id: count_sales
     component: python://count_items
-    args:
+    input:
       data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: calculate_average_sale
     component: python://average_field
-    args:
+    input:
       data: { $from: { workflow: input }, path: "sales_data" }
       field: "revenue"
 
   # This step waits for total_revenue to complete
   - id: calculate_performance_ratio
     component: python://divide
-    args:
+    input:
       a: { $from: { step: "calculate_total_revenue" }, path: "result" }
       b: { $from: { workflow: input }, path: "target_revenue" }
 
   # Format metrics for AI analysis (waits for all calculations)
   - id: format_metrics_summary
     component: python://format_metrics
-    args:
+    input:
       total_revenue: { $from: { step: "calculate_total_revenue" }, path: "result" }
       sales_count: { $from: { step: "count_sales" }, path: "result" }
       average_sale: { $from: { step: "calculate_average_sale" }, path: "result" }
@@ -50,17 +50,17 @@ steps:
   # Format messages for OpenAI (depends on metrics summary)  
   - id: create_openai_messages
     component: "builtins://create_messages"
-    args:
+    input:
       system_instructions: "You are a sales analyst providing insights based on business metrics. Be specific and actionable."
       user_prompt: { $from: { step: "format_metrics_summary" }, path: "summary" }
 
   # Generate AI insights from the metrics
   - id: generate_ai_insights
     component: "builtins://openai"
-    args:
+    input:
       messages: { $from: { step: "create_openai_messages" }, path: "messages" }
 
-outputs:
+output:
   total_revenue: { $from: { step: "calculate_total_revenue" }, path: "result" }
   sales_count: { $from: { step: "count_sales" }, path: "result" }
   average_sale: { $from: { step: "calculate_average_sale" }, path: "result" }
