--- a/examples/file-loading/test-load.yaml
+++ b/examples/file-loading/test-load.yaml
@@ -4,9 +4,9 @@ description: "Simple test of the load_file component"
 steps:
   - id: load_sales_data
     component: "builtins://load_file"
-    args:
+    input:
       path: "examples/data-pipeline/sales-data.json"
 
-outputs:
+output:
   loaded_data: { $from: "load_sales_data", path: "data" }
   file_metadata: { $from: "load_sales_data", path: "metadata" }
