--- a/examples/python/basic.yaml
+++ b/examples/python/basic.yaml
@@ -15,20 +15,20 @@ output_schema:
 steps:
   - id: m_plus_n
     component: python://add
-    args:
+    input:
       a: { $from: { workflow: input }, path: m }
       b: { $from: { workflow: input }, path: n }
   - id: m_times_n
     component: python://multiply
-    args:
+    input:
       a: { $from: { workflow: input }, path: m }
       b: { $from: { workflow: input }, path: n }
   - id: m_plus_n_times_n
     component: python://multiply
-    args:
+    input:
       a: { $from: { step: m_plus_n }, path: result }
       b: { $from: { workflow: input }, path: n }
-outputs:
+output:
   m_plus_n_times_n: { $from: { step: m_plus_n_times_n }, path: result }
   m_times_n: { $from: { step: m_times_n }, path: result }
   m_plus_n: { $from: { step: m_plus_n }, path: result }
